welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:9: error: not found: value nbbis
	nbrbis = nbbis + 1;
                 ^