welcome.lessons.welcome.variables.RunFour.scala.code




var nbrbis = 0;

while(estSurBiscuit && nbrbis < 4){
	avance();
	nbrbis = nbbis + 1;
}


